z-index fix

--- a/host/nginx/www/assets/css/base.less
+++ b/host/nginx/www/assets/css/base.less
@@ -18,6 +18,9 @@ iframe {
     text-align: center;
 }
 .header-wrap {
+    z-index: 1;
+    position: absolute;
+    width:100%;
     background: white;
     box-shadow: 0 0 8px #aaa;
 }
@@ -27,7 +30,6 @@ iframe {
     margin-bottom: 0.5em;
 }
 .tab-content {
-    z-index: -10;
     position: absolute;
     top: 4.5em;
     bottom: 0;
